fix: make some fixes, add eslint

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CodeJam-3 CoreJS",
   "main": "make.js",
   "scripts": {
-    "test": "mocha test.js"
+    "test": "mocha test.js",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,10 @@
   "homepage": "https://github.com/innazl/rsschool-codejam#readme",
   "dependencies": {
     "mocha": "^5.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
